--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - packages/*/*
+- packages/*/*
 autoInstallPeers: false
 catalog:
   browserslist: '*'
@@ -96,12 +96,12 @@ catalog:
   '@cspotcode/outdent': jsr:*
   serialize-error: '*'
   '@fxts/core': '*'
-  vitest: '>=3.2.0-beta.3'
+  vitest: '>=3.2.0'
   vue-tsc: '>=2.2.10'
-  '@vitest/browser': '>=3.2.0-beta.3'
+  '@vitest/browser': '>=3.2.0'
   playwright: '>=1.52.0'
-  '@vitest/coverage-v8': '>=3.2.0-beta.3'
-  '@vitest/coverage-istanbul': '>=3.2.0-beta.3'
+  '@vitest/coverage-v8': '>=3.2.0'
+  '@vitest/coverage-istanbul': '>=3.2.0'
   '@total-typescript/ts-reset': '*'
   '@types/postcss-mixins': '*'
   ts-pattern: '*'
@@ -133,11 +133,11 @@ linkWorkspacePackages: true
 managePackageManagerVersions: false
 nodeLinker: isolated
 onlyBuiltDependencies:
-  - '@moonrepo/cli'
-  - dprint
-  - esbuild
-  - husky
-  - sharp
+- '@moonrepo/cli'
+- dprint
+- esbuild
+- husky
+- sharp
 overrides:
   tsconfck>typescript: '*'
   zod-to-ts>typescript: '*'
