--- a/.moon/tasks/tag-dualBuildsNodeBrowser.yml
+++ b/.moon/tasks/tag-dualBuildsNodeBrowser.yml
@@ -3,3 +3,8 @@ $schema: 'https://moonrepo.dev/schemas/tasks.json'
 tasks:
   js_node:
     command: 'vite build --config vite.config.ts --mode production,node'
+
+  js:
+    deps:
+    - js_default
+    - js_node
