feat(style): add new Vale styles for Microsoft and proselint
Adds a comprehensive set of new Vale styles, including:
- Microsoft style guide rules for grammar, punctuation, and word choice.
- Proselint rules for common writing issues like cliches, jargon, and gender bias.
- Write-good rules for conciseness and active voice.

These new styles will help enforce consistent and high-quality writing across the project's documentation and other text-based assets.

refactor(eslint): update unicorn/prevent-abbreviations rule
refactor(module): update ensuring function unit tests to use direct references
chore: add empty .vale.ini file

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ package-lock.json
 *.js
 !*.config.js
 
+# Spell linter relies on this.
+.vale
+
 # So that actions/setup-node can correctly build yarn cache
 #yarn.lock
 
