--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,7 +1,8 @@
+# vale Vale.Repetition = NO #
 logLevel = 'warn'
 telemetry = false
 
-# We're not using Bun's test runner
+# Not using Bun's test runner
 # [test]
 # coverage = true
 
@@ -14,7 +15,8 @@ saveTextLockfile = true
 # Always use Bun's shell
 shell = 'bun'
 
-# Auto alias node to bun
+# Auto alias node to Bun
 bun = true
 
 silent = true
+# vale Vale.Repetition = YES #
