refactor(docs): migrate TypeScript conventions to dedicated file
Migrated TypeScript conventions from `CONVENTIONS.md` to a new dedicated file at `.kilocode/rules/typescript.md`. This improves organization and allows for better management of Kilo Code custom rules.

Updated `.kilocode/rules/memory-bank/context.md` with current session progress, including the TypeScript convention migration and MCP filesystem server setup.

Adjusted `.vale.ini` to skip `script`, `style`, and `pre` scopes to prevent erroneous Vale errors in code blocks.

Minor formatting adjustments in `packages/module/es/src/jsonc.strip.unit.test.ts` and removed `vale` comments in `packages/module/es/src/logtape.shared.ts`.

--- a/.vale.ini
+++ b/.vale.ini
@@ -6,6 +6,8 @@ MinAlertLevel = suggestion
 # MDX package isn't here because it erronously throws errors.
 Packages = Microsoft, alex
 
+SkippedScopes = script, style, pre
+
 # See https://github.com/errata-ai/vale/issues/1015
 # Vocab = Base
 # Spellchecking rule is disabled temporarily.
