--- a/packages/site/astro-test/moon.yml
+++ b/packages/site/astro-test/moon.yml
@@ -4,3 +4,4 @@ tags:
 # FIXME: Temporarily turned off tsc on this project. This tag will be removed when the team gets to work on this project and fix the types.
 - 'noTypescript'
 - 'noJs'
+- package
