chore(*): project-wide updates and documentation improvements
  docs: enforce emoji-free documentation style
  - CLAUDE.md: add guidelines against emoji usage in content and commit messages
  - CLAUDE.md: add FORBIDDEN LANGUAGE PATTERNS for cleaner communication
  - CLAUDE.md: specify comprehensive commit messages for multiple changes
  - readme.md: remove all decorative emojis from headings and content
  - readme.md: replace emoji indicators with text labels

  build: enhance build configuration
  - moon.yml: add new build tasks and configurations
  - packages/config/vite: update Vite configuration
  - packages/module/es: update package.json with new scripts

  chore: update project settings
  - .claude/settings.local.json: update local Claude settings
  - .gitignore: add new patterns for ignored files
  - package.json: version and dependency updates
  - pnpm-workspace.yaml: workspace configuration updates

  feat(module-es): improve fs.emptyPath module
  - Enhanced implementation with better error handling

  assets: restore blog collection images
  - Replace placeholder images with actual content files
  - Update glass-collection, glass-house, slinky, winter-tree images
  - Update wolf images in multiple sizes and formats

--- a/moon.yml
+++ b/moon.yml
@@ -3,6 +3,8 @@ $schema: 'https://moonrepo.dev/schemas/project.json'
 tasks:
   pnpmVersionCheck:
     command: 'pnpm version'
+  pnpmInstall:
+    command: 'bun packages/module/es/src/moon.pnpmInstall.ts'
 
   test:
     deps:
@@ -48,18 +50,31 @@ tasks:
     - '@group(allDists)'
 
   preparePlaywright:
-    command: 'playwright install'
+    command: 'bun packages/module/es/src/moon.preparePlaywright.ts'
+
   prepareVale:
     deps:
+    - installValeDependencyGlobally
+    - installVale
     - valeSync
     - createValeNoopStyle
+    options:
+      runDepsInParallel: false
+  installVale:
+    # command: 'bun packages/module/es/src/moon.installVale.ts'
+    command: 'moon.installVale'
+    toolchain: node
+  installValeDependencyGlobally:
+    command: 'bun install -g mdx2vast'
   valeSync:
-    command: 'vale sync'
+    command: 'packages/module/es/src/moon.valeSync.ts'
+    toolchain: bun
   createValeNoopStyle:
     command: 'mkdir -p .vale/noop'
 
   prepare:
     deps:
+    - pnpmInstall
     - preparePlaywright
     - prepareVale
     options:
@@ -72,7 +87,7 @@ tasks:
     inputs:
     - '@group(allSources)'
     options:
-     outputStyle: buffer-only-failure
+      outputStyle: buffer-only-failure
 
   buildWatch:
     deps:
