chore(*): improve documentation and build configuration
  docs(CLAUDE.md): enhance style guidelines and documentation conventions
  - Convert ALL CAPS headings to sentence case for consistency
  - Add explicit rules against full capitalization in documentation
  - Add comprehensive markdown conventions section with formatting guidelines
  - Document Moon's default parallel task execution behavior
  - Specify comprehensive commit messages requirement for multiple changes
  - Remove emojis from documentation per user preference

  build(moon.yml): add linting and formatting task configurations
  - Add comprehensive linter tasks: eslint, stylelint, dprint, oxlint
  - Add formatter tasks with optimized parallelization strategy
  - Implement task inheritance using `_lintFormatBase` template
  - Organize formatters in two-stage pipeline for maximum efficiency:
    - Stage 1: dprint formats all file types
    - Stage 2: Language-specific formatters run in parallel
  - Add descriptive task names: formatAllFileTypes, formatLanguageSpecific

  test(module-es): fix array.of test import
  - Update import path in array.of.unit.test.ts

  config: update Vale and package.json configurations
  - Add .vale.ini configuration
  - Update package.json scripts

  assets: restore blog collection images
  - Replace placeholder images with actual content files
  - Update all blog images to proper versions

  The changes establish consistent documentation standards, improve build
  task organization, and optimize formatter execution for better performance.

--- a/.vale.ini
+++ b/.vale.ini
@@ -72,6 +72,10 @@ Microsoft.FirstPerson = NO
 [formats]
 mdx = md
 
+[.{yml,yaml}]
+# Don't warn on values like "buffer-only-failure"
+Microsoft.Hyphens = NO
+
 # IMPORTANT: Run with
 # (this) vale --glob='{*,packages/*/*/*,packages/*/*/src/**/*,.kilocode/rules/**/*}' .
 # (not this, deprecated since negative globs are unreliable) vale --glob='!**/{node_modules,bak,dist,.vale,.}/*' .
