--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "w:bench-slow": "vitest bench",
     "b:bench-slow": "vitest bench --run",
     "//b:lint_eslint": "# eslint is indeed already ran by the IDE, but we want a complete view of all errors too.",
-    "b:lint_eslint": "eslint-p --cache",
-    "b:format_eslint": "eslint-p --cache --fix",
+    "b:lint_eslint": "eslint --cache",
+    "b:format_eslint": "eslint --cache --fix",
     "b:lint_stylelint": "stylelint --ignore-path .gitignore \"**/*.{css,astro,html}\"",
     "b:format_stylelint": "stylelint --ignore-path .gitignore --fix \"**/*.{css,astro,html}\"",
     "b:lint_dprint": "dprint check --list-different",
