feat(module-es): add iterable.some and iterable.take utilities
- Implement iterable.some with early termination support
- Add iterable.take for limiting iteration count
- Include comprehensive unit tests for both utilities
- Update index exports
- Add .prototools configuration for moon
- Update troubleshooting documentation

--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "nano-spawn": "catalog:",
     "execa": "catalog:",
     "eslint": "catalog:",
-    "@monochromatic-dev/config-eslint": "workspace:*",
-    "@moonrepo/cli": "catalog:"
+    "@monochromatic-dev/config-eslint": "workspace:*"
   },
   "workspaces": [
     "packages/*/*"
