test: verify pre-commit hooks are working

--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -31,6 +31,9 @@ vcs:
   hookFormat: 'bash'
 
   syncHooks: true
+  
+  hooks:
+    pre-commit: ['.moon/hooks/pre-commit']
 
 codeowners:
   syncOnRun: true
