feat(moon): add validateSetup task with robust TypeScript scripts
- Add validateSetup task to verify development environment setup
- Create moon.checkTools.ts to validate required and optional tools
- Create moon.checkDependencies.ts to verify pnpm dependencies
- Create moon.checkBuild.ts to check for build artifacts
- Create moon.checkGitHooks.ts to verify git hooks installation

All validation scripts use TypeScript for better error handling and cross-platform compatibility

--- a/moon.yml
+++ b/moon.yml
@@ -95,6 +95,40 @@ tasks:
       runDepsInParallel: false
       outputStyle: buffer-only-failure
 
+  # Validate that the development environment is properly set up
+  validateSetup:
+    deps:
+    - checkTools
+    - checkDependencies
+    - checkBuild
+    - checkGitHooks
+    options:
+      runDepsInParallel: true
+  
+  # Check that required tools are installed
+  checkTools:
+    command: 'bun packages/module/es/src/moon.checkTools.ts'
+    options:
+      outputStyle: buffer-only-failure
+  
+  # Check that dependencies are properly installed
+  checkDependencies:
+    command: 'bun packages/module/es/src/moon.checkDependencies.ts'
+    options:
+      outputStyle: buffer-only-failure
+  
+  # Check that build artifacts exist
+  checkBuild:
+    command: 'bun packages/module/es/src/moon.checkBuild.ts'
+    options:
+      outputStyle: buffer-only-failure
+  
+  # Check that git hooks are installed
+  checkGitHooks:
+    command: 'bun packages/module/es/src/moon.checkGitHooks.ts'
+    options:
+      outputStyle: buffer-only-failure
+
   types:
     command: 'tsc --build --verbose'
     options:
