fix(typescript): add baseUrl to all tsconfig files
Add baseUrl: "./" to all tsconfig.json files across the monorepo to resolve
TypeScript path warnings when using dprint and other tools.

This fixes warnings like:
"Non-relative path ... is not allowed when baseUrl is not set"

--- a/packages/config/eslint/tsconfig.json
+++ b/packages/config/eslint/tsconfig.json
@@ -9,6 +9,7 @@
     }
   ],
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
       "@monochromatic-dev/config-vite": [
         "../vite/src/index.ts"
