--- a/packages/config/typescript/tsconfig.astro.json
+++ b/packages/config/typescript/tsconfig.astro.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.dom.json",
   "compilerOptions": {
+    "baseUrl": "./",
     // Astro requirement
     "allowJs": true,
     "checkJs": true,
