--- a/packages/figma-plugin/css-variables/tsconfig.json
+++ b/packages/figma-plugin/css-variables/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
       "@monochromatic-dev/module-es": [
         "../../module/es/src/index.ts"
