--- a/packages/config/typescript/tsconfig.dom.json
+++ b/packages/config/typescript/tsconfig.dom.json
@@ -1,6 +1,11 @@
 {
   "extends": "./tsconfig.options.json",
   "compilerOptions": {
-    "lib": ["ESNext", "DOM", "WebWorker"]
+    "baseUrl": "./",
+    "lib": [
+      "ESNext",
+      "DOM",
+      "WebWorker"
+    ]
   }
 }
