--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     }
   ],
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
       "@monochromatic-dev/config-eslint": [
         "packages/config/eslint/src/index.ts"
