test: Configure language settings for Moon dependency installation
- Remove pipeline.installDependencies config from workspace.yml
- Add language: 'typescript' to root moon.yml and all TypeScript packages
- Keep pnpmInstall task commented out to test Moon's automatic installation

--- a/moon.yml
+++ b/moon.yml
@@ -1,5 +1,7 @@
 $schema: 'https://moonrepo.dev/schemas/project.json'
 
+language: 'typescript'
+
 tasks:
   # Template for lint/format tasks
   _lintFormatBase:
@@ -11,8 +13,8 @@ tasks:
 
   pnpmVersionCheck:
     command: 'pnpm version'
-  # pnpmInstall:
-  #   command: 'bun packages/module/es/src/moon.pnpmInstall.ts'
+  pnpmInstall:
+    command: 'bun packages/module/es/src/moon.pnpmInstall.ts'
 
   test:
     deps:
@@ -79,7 +81,7 @@ tasks:
 
   prepare:
     deps:
-    # - pnpmInstall  # Commented out to test Moon's automatic dependency installation
+    - pnpmInstall
     - preparePlaywright
     - prepareVale
     options:
