--- a/packages/site/astro-test/moon.yml
+++ b/packages/site/astro-test/moon.yml
@@ -1,4 +1,5 @@
 $schema: 'https://moonrepo.dev/schemas/project.json'
+language: 'typescript'
 
 tags:
 # FIXME: Temporarily turned off tsc on this project. This tag will be removed when the team gets to work on this project and fix the types.
